# modern-be-2024

./: Cargo.toml  README.md  docker-compose.yaml  rust-toolchain.toml
debezium/: connector.json
my-app-api/: Cargo.toml
my-app-api/src/: main.rs
my-app-api/src/configuration/: mod.rs  mysql_configuration.rs  opensearch_configuration.rs
my-app-api/src/handler/: hello_handler.rs
my-app-api/src/model/: mod.rs  search_response.rs
my-app-api/src/repository/: hello_repository.rs
my-app-api/src/service/: hello_service.rs
my-app-consumer/: Cargo.toml
my-app-consumer/src/: main.rs
my-app-consumer/src/handler/: hello_handler.rs
my-app-consumer/src/model/: hello_message.rs  mod.rs
my-app-domain/: Cargo.toml
my-app-domain/src/model/: hello.rs
scripts/: initialize_database.sh  local.env  setup_debezium.sh
sql/: 001_create_hello.sql
src/: main.rs
src/handler/: hello_handler.rs
src/model/: hello.rs
src/repository/: hello_repository.rs
src/service/: hello_service.rs
