[package]
name = "my-app-consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
my-app-domain = { path = "../my-app-domain" }
futures = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.18", features = ["full"] }
opensearch = "2.2.0"
anyhow = "1.0.86"

    [dependencies.rdkafka]
    version     = "0.36.2"
